--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="Ariana Papantonio | Data Analytics Portfolio" />
+  <meta property="og:description" content="Projects using Python, SQL, and data visualization." />
+  <meta property="og:image" content="https://yourdomain.com/path-to-image.jpg" />
+  <meta property="og:url" content="https://arianapapantonio.github.io/" />
+  <meta property="og:type" content="website" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ariana Papantonio | Data Portfolio</title>
