Updating meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta property="og:title" content="Ariana Papantonio | Data Analytics Portfolio" />
   <meta property="og:description" content="Projects using Python, SQL, and data visualization." />
-  <meta property="og:image" content="https://yourdomain.com/path-to-image.jpg" />
+  <meta property="og:image" content="https://arianapapantonio.github.io/path-to-image.jpg" />
   <meta property="og:url" content="https://arianapapantonio.github.io/" />
   <meta property="og:type" content="website" />
   <meta charset="UTF-8" />
